--- a/tools/generators/connected/connected.spec.ts.hbs
+++ b/tools/generators/connected/connected.spec.ts.hbs
@@ -1,6 +1,7 @@
-import { mount, createLocalVue } from '@vue/test-utils';
-import Vuex from 'vuex';
-import {{ properCase componentName }} from './{{ properCase componentName }}.vue';
+import { createLocalVue, mount } from '@vue/test-utils';
+import Vuex                      from 'vuex';
+import { i18n }                  from '../../shared/plugins/i18n/i18n';
+import {{ properCase componentName }}                   from './{{ properCase componentName }}.vue';
 
 const localVue = createLocalVue();
 
@@ -10,16 +11,58 @@ describe('{{ properCase componentName }}.vue', () => {
 
   test('renders component', () => {
     const store = new Vuex.Store({
-                          getters: {
-                          getTopics: () => [],
-                        },
-                      });
-    const wrapper = mount({{ properCase componentName }}, { store, localVue });
+                                   modules: {
+                                     {{ camelCase moduleName }}: {
+                                       namespaced: true,
+                                       getters:    {
+                                         getCount: () => 0,
+                                       },
+                                       actions:    {
+                                         increment: jest.fn(),
+                                         decrement: jest.fn(),
+                                       },
+                                     },
+                                   },
+                                 });
+    const wrapper = mount({{ properCase componentName }}, {
+      store,
+      localVue,
+      i18n,
+    });
 
     expect(wrapper.find('h1').text()).toBe('{{ properCase componentName }}');
   });
 
-  test('fetches data on the server', () => {
+  test('should increment and decrement', () => {
+    const actions = {
+      increment: jest.fn(),
+      decrement: jest.fn(),
+    };
+    const store = new Vuex.Store({
+                                   modules: {
+                                     {{ camelCase moduleName }}: {
+                                       namespaced: true,
+                                       getters:    {
+                                         getCount: () => 0,
+                                       },
+                                       actions,
+                                     },
+                                   },
+                                 });
+    const wrapper: any = mount({{ properCase componentName }}, {
+      store,
+      localVue,
+      i18n,
+    });
+
+    wrapper.vm.increment();
+    expect(actions.increment).toHaveBeenCalled();
+
+    wrapper.vm.decrement();
+    expect(actions.decrement).toHaveBeenCalled();
+  });
+
+  test('dispatches action on the server', () => {
     const store = {
       dispatch: jest.fn(),
     };
@@ -27,7 +70,7 @@ describe('{{ properCase componentName }}.vue', () => {
     {{ properCase componentName }}.prefetch({ store });
 
     expect(store.dispatch).toHaveBeenCalled();
-    expect(store.dispatch).toHaveBeenCalledWith(`getTopics`);
+    expect(store.dispatch).toHaveBeenCalledWith(`{{ camelCase moduleName }}/increment`);
   });
 
 });
