--- a/tools/generators/module/mutations.ts.hbs
+++ b/tools/generators/module/mutations.ts.hbs
@@ -1,29 +1,21 @@
-export interface I{{ properCase moduleName }}State {
-  {{ camelCase moduleName }}: {
-    topics: any[],
-    error: Error,
-  };
-}
+import { I{{ properCase moduleName }}State } from './state';
 
 export interface I{{ properCase moduleName }}Mutations {
-  TOPICS(state: I{{ properCase moduleName }}State, topics: any[]): void;
+  SET_INCREMENT_PENDING(state: I{{ properCase moduleName }}State, pending: boolean): void;
 
-  TOPICS_FAILURE(state: I{{ properCase moduleName }}State, error: Error): void;
+  SET_DECREMENT_PENDING(state: I{{ properCase moduleName }}State, pending: boolean): void;
+
+  SET_COUNT(state: I{{ properCase moduleName }}State, count: number): void;
 }
 
-export const {{ properCase moduleName }}DefaultState: I{{ properCase moduleName }}State = {
-  {{ camelCase moduleName }}: {
-    topics: [],
-    error: null,
-  },
-};
-
 export const {{ properCase moduleName }}Mutations: I{{ properCase moduleName }}Mutations = {
-  TOPICS: (state: I{{ properCase moduleName }}State, topics: any[]) => {
-    state.{{ camelCase moduleName }}.topics = topics;
-    state.{{ camelCase moduleName }}.error = null;
+  SET_INCREMENT_PENDING: (state: I{{ properCase moduleName }}State, pending: boolean) => {
+    state.incrementPending = pending;
   },
-  TOPICS_FAILURE: (state: I{{ properCase moduleName }}State, error: Error) => {
-    state.{{ camelCase moduleName }}.error = error;
+  SET_DECREMENT_PENDING: (state: I{{ properCase moduleName }}State, pending: boolean) => {
+    state.decrementPending = pending;
+  },
+  SET_COUNT:             (state: I{{ properCase moduleName }}State, count: number) => {
+    state.count = count;
   },
 };
