--- a/tools/generators/module/routes.ts.hbs
+++ b/tools/generators/module/routes.ts.hbs
@@ -2,7 +2,7 @@ import { RouteConfig } from 'vue-router/types/router';
 
 export const {{ properCase moduleName }}Routes: RouteConfig[] = [
   {
-    path: '/{{ camelCase moduleName }}',
-    component: () => import(/* webpackChunkName: "{{ camelCase moduleName }}" */ './{{ properCase moduleName }}/{{ properCase moduleName }}.vue').then(m => m.default)
+    path:      '/{{ properCase moduleName }}',
+    component: () => import(/* webpackChunkName: "{{ camelCase moduleName }}" */ './{{ properCase moduleName }}/{{ properCase moduleName }}.vue').then(m => m.default),
   },
 ];
