--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -2,35 +2,69 @@
 $brand-dark-primary: #7966F3;
 $brand-light-primary: #9B9BFD;
 $brand-primary: #A851E2;
-
 $brand-accent: #17BEBB;
 $brand-warn: #FB3640;
 
+/* Background Colors */
 $bg-color: #333;
+$bg-color-inverse: #FFF;
 
+/* Text Colors */
 $text-color: #FFF;
+$text-color-inverse: #333;
 $secondary-text-color: #BABABA;
 
+/* Border Colors */
 $divider-color: lighten($bg-color, 20%);
 
+/* Animation Language */
 $transition-duration: 250ms;
 
-/* General */
-$google-font: 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
-$font-family: 'Alegreya Sans', Helvetica, sans-serif;
-$font-size: 16px;
-$font-color: $text-color;
-$font-weight: 300;
-$grid-unit: 8px;
-$link-active-color: $brand-accent;
+/* Font Sizes */
+$font-size: 1.6rem;
+$font-size-h1: 4.6rem;
+$font-size-h2: 3.6rem;
+$font-size-h3: 2.8rem;
+$font-size-h4: 2.2rem;
+$font-size-h5: 1.8rem;
+$font-size-h6: 1.6rem;
 
-/* Headings */
-$font-size-h1: 42px;
-$font-size-h2: 36px;
-$font-size-h3: 30px;
-$font-size-h4: 26px;
-$font-size-h5: 22px;
-$font-size-h6: 18px;
+/* Font Size Factors */
+$font-size-factor-tablet-landscape: 1.125;
+$font-size-factor-large-desktop: 1.25;
+
+/* Font Weights */
+$font-weight: 300;
+$font-weight-h1: 400;
+$font-weight-h2: 400;
+$font-weight-h3: 400;
+$font-weight-h4: 400;
+$font-weight-h5: 400;
+$font-weight-h6: 700;
+
+/* Line Heights */
+$line-height: 1.6;
+$line-height-h1: 1.2;
+$line-height-h2: 1.25;
+$line-height-h3: 1.3;
+$line-height-h4: 1.35;
+$line-height-h5: 1.5;
+$line-height-h6: 1.4;
+
+/* Letter Spacings */
+$letter-spacing: .01em;
+$letter-spacing-h1: -.1rem;
+$letter-spacing-h2: -.1rem;
+$letter-spacing-h3: -.1rem;
+$letter-spacing-h4: -.08rem;
+$letter-spacing-h5: -.05rem;
+$letter-spacing-h6: -.1rem;
+
+/* General */
+$google-font: 'https://fonts.googleapis.com/css?family=Oxygen:300,400,700|Lato:300,400,700';
+$font-family-headings: 'Oxygen', Helvetica, sans-serif;
+$font-family: 'Lato', Helvetica, sans-serif;
+$grid-unit: 0.8rem;
 
 /* Grid */
 $screen-phone: 320px;
@@ -44,10 +78,10 @@ $screen-small-desktop-max: $screen-small-desktop - 1;
 $screen-large-desktop: 1440px;
 $screen-large-desktop-max: $screen-large-desktop - 1;
 $screen-phone-gutter: 16px;
-$screen-tablet-portrait-gutter: 16px;
-$screen-tablet-landscape-gutter: 16px;
-$screen-small-desktop-gutter: 16px;
-$screen-large-desktop-gutter: 16px;
+$screen-tablet-portrait-gutter: $grid-unit * 2;
+$screen-tablet-landscape-gutter: $grid-unit * 2;
+$screen-small-desktop-gutter: $grid-unit * 2;
+$screen-large-desktop-gutter: $grid-unit * 2;
 
 /* AppNavBar*/
 $nav-bar-bg: linear-gradient(to bottom, $bg-color 0%, lighten($bg-color, 2%) 50%, $bg-color 100%);
@@ -67,11 +101,11 @@ $nav-bar-menu-bg: transparent;
 
 /* Button */
 $button-font-family: $font-family;
-$button-padding: ($grid-unit * 2) - 2 $grid-unit * 2;
-$button-margin: 0 $grid-unit $grid-unit * 2 0;
+$button-padding: $grid-unit $grid-unit * 2;
+$button-margin: 0 $grid-unit 0 0;
 $button-min-width: $grid-unit * 14;
 $button-height: $grid-unit * 6;
-$button-font-size: $font-size;
+$button-font-size: inherit;
 $button-font-weight: 400;
 $button-border-radius: 0;
 $button-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.4);
@@ -103,20 +137,20 @@ $loader-large-size: $grid-unit * 16;
 $panel-bg: lighten($bg-color, 5%);
 $panel-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 $panel-border-radius: 0;
-$panel-margin: 0 0 $grid-unit * 5 0;
+$panel-margin: 0;
 
-$panel-header-padding: $grid-unit * 3 $grid-unit * 3 $grid-unit * 2;
+$panel-header-padding: $grid-unit * 2;
 $panel-header-image-size: $grid-unit * 5;
 $panel-header-image-border-radius: 50%;
 $panel-header-image-margin: $grid-unit $grid-unit * 2 0 0;
-$panel-header-title-font-size: $font-size-h6;
+$panel-header-title-font-size: inherit;
 $panel-header-title-font-weight: 500;
-$panel-header-subtitle-font-size: $font-size;
+$panel-header-subtitle-font-size: inherit;
 $panel-header-subtitle-font-weight: 300;
 $panel-header-subtitle-color: $secondary-text-color;
 
-$panel-body-padding: $grid-unit * 2 $grid-unit * 3;
-$panel-body-font-size: $font-size;
+$panel-body-padding: $grid-unit * 2;
+$panel-body-font-size: inherit;
 $panel-body-color: $text-color;
 
 $panel-footer-padding: $grid-unit * 2;
@@ -126,16 +160,17 @@ $input-border-bottom: 1px solid $divider-color;
 $input-background-color: transparent;
 $input-padding: $grid-unit 0;
 $input-margin: $grid-unit * 3 0 $grid-unit * 2;
-$input-font-size: $font-size;
-$input-color: $font-color;
-$input-color-disabled: lighten($font-color, 40%);
+$input-font-family: $font-family;
+$input-font-size: inherit;
+$input-color: $text-color;
+$input-color-disabled: lighten($text-color, 40%);
 $input-height: $grid-unit * 4;
 
-$input-placeholder-top: $grid-unit;
+$input-placeholder-top: 0;
 $input-placeholder-color: $input-color;
 $input-placeholder-font-size: $input-font-size;
 $input-placeholder-font-weight: $font-weight;
-$input-placeholder-active-font-size: $input-font-size - 4;
+$input-placeholder-active-font-size: 75%;
 $input-placeholder-active-font-weight: $font-weight;
 $input-placeholder-active-font-color: $brand-accent;
 $input-placeholder-active-height: $grid-unit * 2;
@@ -158,8 +193,8 @@ $modal-max-width: 480px;
 
 /* Footer */
 $footer-padding: $grid-unit * 2 0 $grid-unit * 2 0;
-$footer-bg: linear-gradient(to bottom, darken($text-color, 3%) 0%, $text-color 50%, darken($text-color, 3%) 100%);
-$footer-color: $bg-color;
+$footer-bg: linear-gradient(to bottom, darken($bg-color-inverse, 3%) 0%, $bg-color-inverse 50%, darken($bg-color-inverse, 3%) 100%);
+$footer-color: $text-color-inverse;
 
 /* Tabs */
 $tab-group-bg: $panel-bg;
@@ -186,7 +221,7 @@ $checkbox-transition: background $transition-duration cubic-bezier(0, .84, .83, 
 $checkbox-check: 2px solid #FFF;
 $checkbox-check-margin: 0 $grid-unit * 2 0 0;
 $checkbox-checked-bg: $brand-accent;
-$checkbox-shadow: $panel-shadow;
+$checkbox-shadow: -2px 2px 2px rgba(0, 0, 0, .24);
 
 /* Tooltip */
 $tooltip-bg: $brand-accent;
@@ -236,7 +271,7 @@ $select-margin: 0 0 $grid-unit * 2 0;
 $select-padding: $grid-unit * 2;
 $select-border-top: $accordion-item-header-border-top;
 $select-color: $text-color;
-$select-font-size: $font-size;
+$select-font-size: inherit;
 $select-arrow-color: $brand-accent;
 
 $select-multi-max-height: $grid-unit * 13;
