--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -77,7 +77,7 @@ $screen-small-desktop: 1200px;
 $screen-small-desktop-max: $screen-small-desktop - 1;
 $screen-large-desktop: 1440px;
 $screen-large-desktop-max: $screen-large-desktop - 1;
-$screen-phone-gutter: 16px;
+$screen-phone-gutter: 1.6rem;
 $screen-tablet-portrait-gutter: $space-unit * 2;
 $screen-tablet-landscape-gutter: $space-unit * 2;
 $screen-small-desktop-gutter: $space-unit * 2;
