--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -77,11 +77,11 @@ $screen-small-desktop: 1200px;
 $screen-small-desktop-max: $screen-small-desktop - 1;
 $screen-large-desktop: 1440px;
 $screen-large-desktop-max: $screen-large-desktop - 1;
-$screen-phone-gutter: 1.6rem;
+$screen-phone-gutter: 16px;
 $screen-tablet-portrait-gutter: $space-unit * 2;
 $screen-tablet-landscape-gutter: $space-unit * 2;
-$screen-small-desktop-gutter: $space-unit * 2;
-$screen-large-desktop-gutter: $space-unit * 2;
+$screen-small-desktop-gutter: $space-unit * 4;
+$screen-large-desktop-gutter: $space-unit * 4;
 
 /* AppNavBar*/
 $nav-bar-bg: linear-gradient(to bottom, $bg-color 0%, lighten($bg-color, 2%) 50%, $bg-color 100%);
