--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -364,4 +364,22 @@ $carousel-indicator-size: $space-unit;
 $carousel-indicator-space: $space-unit;
 $carousel-indicator-shadow: $panel-shadow;
 $carousel-indicator-bg: $bg-color-inverse;
-$carousel-indicator-active-bg: $brand-accent
+$carousel-indicator-active-bg: $brand-accent;
+
+/* Toggle */
+$toggle-bg: $panel-bg;
+$toggle-shadow: $panel-shadow;
+$toggle-border-radius: $space-unit * 3;
+$toggle-width: $space-unit * 6;
+$toggle-height: $space-unit * 1.5;
+$toggle-transition: all $transition-duration ease-in-out;
+
+$toggle-handle-border-radius: 50%;
+$toggle-handle-size:$space-unit * 3;
+$toggle-handle-bg: $bg-color-inverse;
+$toggle-handle-shadow: $panel-shadow;
+$toggle-handle-checked-bg: $brand-accent;
+$toggle-handle-focused-shadow: $slider-handle-active-shadow;
+
+$toggle-disabled-bg: $panel-bg;
+$toggle-handle-disabled-bg: $divider-color;
