feat: replace font-awesome with SVG's (#180)
closes #177

--- a/src/app/shared/styles/global.scss
+++ b/src/app/shared/styles/global.scss
@@ -11,3 +11,27 @@ img[alt=""],
 img:not([alt]) {
   border: 5px dashed $brand-warn;
 }
+
+/* vue-icon global style */
+i {
+  display: inline-block;
+  height:  $font-size;
+  width:   $font-size;
+  fill:    $text-color;
+
+  @include media(tabletLandscape) {
+    height: $font-size * $font-size-factor-tablet-landscape;
+    width:  $font-size * $font-size-factor-tablet-landscape;
+  }
+
+  @include media(largeDesktop) {
+    height: $font-size * $font-size-factor-large-desktop;
+    width:  $font-size * $font-size-factor-large-desktop;
+  }
+
+  svg {
+    height: inherit;
+    width:  inherit;
+  }
+}
+
