--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -201,16 +201,14 @@ $footer-color: $text-color-inverse;
 /* Tabs */
 $tab-group-bg: $panel-bg;
 $tab-group-shadow: $nav-bar-shadow;
-$tab-group-padding: 0 $space-unit * 2 $space-unit * 2;
+$tab-group-padding: $space-unit * 2;
 $tab-group-margin: $space-unit * 4 0 0 0;
 
-$tab-group-header-bg: $panel-bg;
-$tab-group-header-shadow: $nav-bar-shadow;
-$tab-group-header-item-padding: $space-unit * 1.5 $space-unit $space-unit;
-$tab-group-header-item-border-left: 1px solid lighten($panel-bg, 2%);
-$tab-group-header-item-border-right: 1px solid darken($panel-bg, 2%);
-$tab-group-header-item-hover-bg: $brand-primary;
-$tab-group-header-item-hover-color: $bg-color;
+$tab-group-header-bg: $bg-color;
+$tab-group-header-bg: $bg-color;
+$tab-group-header-item-padding: $space-unit * 2;
+$tab-group-header-item-hover-bg: $panel-bg;
+$tab-group-header-item-hover-color: $text-color;
 
 $tab-item-transition: transform $transition-duration linear;
 
@@ -377,7 +375,7 @@ $toggle-height: $space-unit * 1.5;
 $toggle-transition: all $transition-duration ease-in-out;
 
 $toggle-handle-border-radius: 50%;
-$toggle-handle-size:$space-unit * 3;
+$toggle-handle-size: $space-unit * 3;
 $toggle-handle-bg: $bg-color-inverse;
 $toggle-handle-shadow: $panel-shadow;
 $toggle-handle-checked-bg: $brand-accent;
