refactor(vuex): change default-state object to a factory function (#183)
closes #182

--- a/tools/generators/connected/connected.spec.ts.hbs
+++ b/tools/generators/connected/connected.spec.ts.hbs
@@ -15,7 +15,9 @@ describe('{{ properCase componentName }}.vue', () => {
                                      {{ camelCase moduleName }}: {
                                        namespaced: true,
                                        getters:    {
-                                         getCount: () => 0,
+                                         count: () => 0,
+                                         incrementPending: () => false,
+                                         decrementPending: () => false,
                                        },
                                        actions:    {
                                          increment: jest.fn(),
@@ -43,7 +45,9 @@ describe('{{ properCase componentName }}.vue', () => {
                                      {{ camelCase moduleName }}: {
                                        namespaced: true,
                                        getters:    {
-                                         getCount: () => 0,
+                                         count: () => 0,
+                                         incrementPending: () => false,
+                                         decrementPending: () => false,
                                        },
                                        actions,
                                      },
