--- a/tools/generators/module/module.ts.hbs
+++ b/tools/generators/module/module.ts.hbs
@@ -13,7 +13,7 @@ export const {{ properCase moduleName }}Module: Module<I{{ properCase moduleName
     ...{{ properCase moduleName }}Getters,
   },
   state:      {
-    ...{{ properCase moduleName }}DefaultState,
+    ...{{ properCase moduleName }}DefaultState(),
   },
   mutations:  {
     ...{{ properCase moduleName }}Mutations,
