--- a/tools/generators/module/actions.spec.ts.hbs
+++ b/tools/generators/module/actions.spec.ts.hbs
@@ -3,7 +3,6 @@ import { HttpService }                        from '../shared/services/HttpServi
 import { ActionContext, Commit, Dispatch }    from 'vuex';
 import { {{ properCase moduleName }}Actions }                     from './actions';
 import { {{ properCase moduleName }}DefaultState, I{{ properCase moduleName }}State } from './state';
-import { {{ properCase moduleName }}Getters }                     from './getters';
 
 describe('{{ properCase moduleName }}Actions', () => {
   let testContext: ActionContext<I{{ properCase moduleName }}State, I{{ properCase moduleName }}State>;
@@ -13,10 +12,7 @@ describe('{{ properCase moduleName }}Actions', () => {
     testContext = {
       dispatch: jest.fn() as Dispatch,
       commit:   jest.fn() as Commit,
-      state:    {{ properCase moduleName }}DefaultState,
-      getters:  {
-        ...{{ properCase moduleName }}Getters,
-      },
+      state:    {{ properCase moduleName }}DefaultState(),
     } as ActionContext<I{{ properCase moduleName }}State, I{{ properCase moduleName }}State>;
 
     mockAxios = new MockAdapter(HttpService);
