--- a/tools/generators/module/state.ts.hbs
+++ b/tools/generators/module/state.ts.hbs
@@ -4,8 +4,10 @@ export interface I{{ properCase moduleName }}State {
   count: number;
 }
 
-export const {{ properCase moduleName }}DefaultState: I{{ properCase moduleName }}State = {
-  incrementPending: false,
-  decrementPending: false,
-  count:            0,
+export const {{ properCase moduleName }}DefaultState = (): I{{ properCase moduleName }}State => {
+  return {
+    incrementPending: false,
+    decrementPending: false,
+    count:            0,
+  };
 };
