--- a/tools/generators/module/routes.ts.hbs
+++ b/tools/generators/module/routes.ts.hbs
@@ -3,6 +3,6 @@ import { RouteConfig } from 'vue-router/types/router';
 export const {{ properCase moduleName }}Routes: RouteConfig[] = [
   {
     path:      '/{{ camelCase moduleName }}',
-    component: () => import(/* webpackChunkName: "{{ camelCase moduleName }}" */ './{{ properCase moduleName }}/{{ properCase moduleName }}.vue').then(m => m.default),
+    component: () => import(/* webpackChunkName: "{{ camelCase moduleName }}" */ './{{ properCase moduleName }}/{{ properCase moduleName }}.vue').then((m: any) => m.default),
   },
 ];
