--- a/tools/generators/connected/connected.spec.ts.hbs
+++ b/tools/generators/connected/connected.spec.ts.hbs
@@ -1,31 +1,47 @@
-import { createLocalVue, mount } from '@vue/test-utils';
-import Vuex                      from 'vuex';
-import { i18n }                  from '../../shared/plugins/i18n/i18n';
-import {{ properCase componentName }}                   from './{{ properCase componentName }}.vue';
+import { createLocalVue, mount }               from '@vue/test-utils';
+import Vuex, { ActionTree, GetterTree, Store } from 'vuex';
+import {{ properCase componentName }}                                 from './{{ properCase componentName }}.vue';
+import { {{ properCase componentName }}Getters, I{{ properCase componentName }}Getters }     from '../getters';
+import { {{ properCase componentName }}DefaultState, I{{ properCase componentName }}State }  from '../state';
+import { {{ properCase componentName }}Actions, I{{ properCase componentName }}Actions }     from '../actions';
+import { i18n }                                from '../../shared/plugins/i18n/i18n';
 
 const localVue = createLocalVue();
 
 localVue.use(Vuex);
 
 describe('{{ properCase componentName }}.vue', () => {
+  let store: Store<I{{ properCase componentName }}State>;
+  let getters: GetterTree<I{{ properCase componentName }}State, I{{ properCase componentName }}Getters>;
+  let actions: ActionTree<I{{ properCase componentName }}State, I{{ properCase componentName }}Actions>;
+  let state: I{{ properCase componentName }}State;
+
+  beforeEach(() => {
+    getters = {
+      ...{{ properCase componentName }}Getters,
+    };
+    actions = {
+      ...{{ properCase componentName }}Actions,
+      increment: jest.fn(),
+      decrement: jest.fn(),
+    };
+    state = {
+      ...{{ properCase componentName }}DefaultState(),
+    };
+
+    store = new Vuex.Store({
+                             modules: {
+                               {{ camelCase moduleName }}: {
+                                 namespaced: true,
+                                 getters,
+                                 actions,
+                                 state,
+                               },
+                             },
+                           } as any);
+  });
 
   test('renders component', () => {
-    const store = new Vuex.Store({
-                                   modules: {
-                                     {{ camelCase moduleName }}: {
-                                       namespaced: true,
-                                       getters:    {
-                                         count: () => 0,
-                                         incrementPending: () => false,
-                                         decrementPending: () => false,
-                                       },
-                                       actions:    {
-                                         increment: jest.fn(),
-                                         decrement: jest.fn(),
-                                       },
-                                     },
-                                   },
-                                 });
     const wrapper = mount({{ properCase componentName }}, {
       store,
       localVue,
@@ -36,23 +52,6 @@ describe('{{ properCase componentName }}.vue', () => {
   });
 
   test('should increment and decrement', () => {
-    const actions = {
-      increment: jest.fn(),
-      decrement: jest.fn(),
-    };
-    const store = new Vuex.Store({
-                                   modules: {
-                                     {{ camelCase moduleName }}: {
-                                       namespaced: true,
-                                       getters:    {
-                                         count: () => 0,
-                                         incrementPending: () => false,
-                                         decrementPending: () => false,
-                                       },
-                                       actions,
-                                     },
-                                   },
-                                 });
     const wrapper: any = mount({{ properCase componentName }}, {
       store,
       localVue,
@@ -67,9 +66,7 @@ describe('{{ properCase componentName }}.vue', () => {
   });
 
   test('dispatches action on the server', () => {
-    const store = {
-      dispatch: jest.fn(),
-    };
+    store.dispatch = jest.fn();
 
     {{ properCase componentName }}.prefetch({ store });
 
