docs: add design system storybook integration (#275)
related to #133

--- a/src/app/shared/styles/reset.scss
+++ b/src/app/shared/styles/reset.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins";
+
 /*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
