feat(components): add donut chart (#278)

--- a/tools/generators/component/component.spec.ts.hbs
+++ b/tools/generators/component/component.spec.ts.hbs
@@ -12,7 +12,7 @@ describe('{{ properCase componentName }}.vue', () => {
                           },
     );
 
-    expect(wrapper.find('h1').text()).toBe('{{ properCase componentName }}');
+    expect(wrapper.text()).toBe('{{ properCase componentName }}');
   });
 
 });
