refactor(vue-panel): rename to vue-card

--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -20,7 +20,7 @@
 @import "variables/nav-bar";
 @import "variables/notification-stack";
 @import "variables/pagination";
-@import "variables/panel";
+@import "variables/card";
 @import "variables/select";
 @import "variables/sidebar";
 @import "variables/slider";
