feat(components): accessibility iteration (#283)
closes #259

--- a/src/app/shared/styles/variables/_calendar.scss
+++ b/src/app/shared/styles/variables/_calendar.scss
@@ -23,5 +23,5 @@ $calendar-current-day-color: $text-color-inverse;
 $calendar-current-day-font-weight: $font-weight-medium;
 
 $calendar-selected-day-bg: $brand-secondary;
-$calendar-selected-day-color: $text-color-inverse;
+$calendar-selected-day-color: $text-color;
 $calendar-selected-day-font-weight: $font-weight-medium;
