fix(tests): get rid of wrapper:any
related to #284

--- a/tools/generators/component/component.spec.ts.hbs
+++ b/tools/generators/component/component.spec.ts.hbs
@@ -6,7 +6,7 @@ const localVue = createLocalVue();
 describe('{{ properCase componentName }}.vue', () => {
 
 test('renders component', () => {
-  const wrapper = mount({{ properCase componentName }},
+  const wrapper = mount<any>({{ properCase componentName }},
     {
       localVue,
     },
