refactor(http-service): separate interceptors; add tests

--- a/src/app/shared/styles/typo.scss
+++ b/src/app/shared/styles/typo.scss
@@ -12,6 +12,7 @@ body {
   font-weight: $font-weight-regular;
   letter-spacing: $letter-spacing;
   line-height: $line-height;
+  font-display: swap;
 }
 
 small {
